--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,3 +7,94 @@ body {
   background-color: $background--light;
   padding: $half-space;
 }
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+#left-side {
+  display: flex;
+  flex-direction: column;
+  flex: 50%;
+}
+
+#right-side {
+  display: flex;
+  flex-direction: column;
+  flex: 50%;
+}
+
+#header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#search-holder {
+  padding: 10px;
+  margin: 10px;
+}
+
+#search-box{
+  padding: 10px;
+  margin: 10px;
+}
+
+#search-btn{
+  padding: 10px;
+  margin: 10px;
+}
+
+.gist{
+  text-align: center;
+  padding: 10px;
+  margin: 5px 20px;
+  background: rgb(222, 222, 222);
+  transition: box-shadow 0.1s linear;
+}
+
+.gist:hover{
+  box-shadow: 0px 0px 6px 6px rgb(255, 255, 255);
+}
+
+.file-holder{
+  margin: 5px 20px;
+  padding: 10px;
+  background: #dedede;
+  display: flex;
+}
+
+.file-title{
+  padding: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.file-type-img {
+  display: inline-block;
+  margin: 10px 0;
+}
+
+.fork-holder {
+  display: flex;
+  padding: 10px;
+  margin: 5px 20px;
+  background: white;
+}
+
+.forker-username {
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+}
+
+.avatar-image {
+  height: 32px;
+}
+
+.section-title {
+  text-align: center;
+  padding: 10px;
+}
